[package]
name = "dlmm-sub"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "^0.10"
clap = "4.5.32"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
solana-program = "2.2.1"
toml = "0.8.20"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
yellowstone-vixen = { version = "0.1.0", features = ["stream"] }
yellowstone-vixen-core = "0.1.0"
spl-token = "7.0.0"
tracing = "0.1.41"


[features]
serde = []
